--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -102,6 +102,11 @@
         justify-content: center;
       }
       .event-card {
+        display: flex; 
+        flex-direction: column;  
+        justify-content: center;  
+        align-items: center;
+        text-align: center;
         width: 250px;
         margin: 15px;
         padding: 15px;
@@ -126,7 +131,7 @@
       }
       .event-card button {
         margin: 5px;
-        padding: 10px;
+        padding: 5px;
         font-size: 0.9em;
         border: none;
         border-radius: 5px;
@@ -151,7 +156,7 @@
           <li><a href="{% url 'home' %}">Home</a></li>
           <li><a href="#">Pending</a></li>
           <li><a href="#">Booking</a></li>
-          <li><a href="#">List</a></li>
+          <li><a href="{% url 'link_list' %}">List</a></li>
           
 
           {% if user.is_authenticated %}
@@ -184,7 +189,6 @@
     </header>
 
     <main id="events-Main">
-      <!-- Example of event card, replace with dynamic Django data -->
       <!-- <div class="event-card">
         <img src="imgages\realmadrid.jpeg" alt="Event Image" />
         <h2>Match: Real Madrid</h2>
@@ -199,7 +203,7 @@
         src="{% if event.image %}{{ event.image.url }}{% else %}{% static 'images/profile.png' %}{% endif %}"
         alt="{{ event.name }}" />
     
-        <h2>{{ event.name }}</h2>
+        <h2>{{ event.title }}</h2>
         <h2>{{ event.price }}</h2>
         <p>{{ event.date }}</p>
         <button>Add to Cart</button>
