--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -156,7 +156,7 @@
           <li><a href="{% url 'home' %}">Home</a></li>
           <li><a href="#">Pending</a></li>
           <li><a href="#">Booking</a></li>
-          <li><a href="{% url 'link_list' %}">List</a></li>
+          <li><a href="{% url 'view_cart' %}">Cart</a></li>
 
           {% if user.is_authenticated %}
           <!-- قائمة الملف الشخصي -->
@@ -168,13 +168,14 @@
                 alt="Profile"
                 class="profile-icon"
               />
-              <span>
-                {% if user.is_authenticated %} {{ user.username }} {% endif %}
-              </span>
+              {% if user.is_authenticated %}
+              <span> {{ user.username }} </span>
+              <span> {{ user.role }} </span>
+              {% endif %}
             </a>
             <ul class="dropdown" id="profile-dropdown">
               <li>
-                <a href="{% url 'update_profile_image' %}">Change Picture</a>
+                <a href="{% url 'update_profile_image' %}">ChangePic</a>
               </li>
               <li><a href="#">Settings</a></li>
               <li><a href="{% url 'logout' %}">Logout</a></li>
@@ -205,13 +206,18 @@
         <h2>{{ event.title }}</h2>
         <h2>{{ event.price }}</h2>
         <p>{{ event.date }}</p>
+        <!-- هنا نحتاج إضاقة js   تعمل مع او بدون حسب برمجتك وتعديلاتك لكن تحتاج-->
         <form action="{% url 'add_to_cart' event.id %}">
           <button class="add-to-cart-btn" data-ticket-id="{{ event.id }}">
             Add to Cart
           </button>
         </form>
+        <form action="{% url 'checkout_event' event.id %}" method="post">
+          {% csrf_token %}
+          <button type="submit">Booking Event</button>
+      </form>
         <form action="{% url 'event_details' event.id %}">
-          <button>details</button>
+          <button type="submit">details</button>
         </form>
       </div>
       {% endfor %}
