--- a/templates/pages/event_details.html
+++ b/templates/pages/event_details.html
@@ -201,17 +201,19 @@
         <p>{{ event.date }}</p>
         <p>{{ event.time }}</p>
 
-        <!-- <form action="{% url 'add_to_cart' event.id %}">
+        <form action="{% url 'add_to_cart' event.id %}">
           <button class="add-to-cart-btn" data-ticket-id="{{ event.id }}">
             Add to Cart
           </button>
-        </form> -->
+        </form>
         
-        <form action="{% url 'create_payment' event.id %}">
-          <button>BookingNow</button>
+        <form action="{% url 'checkout_event' event.id %}">
+          <button>Booking Event</button>
         </form>
       </div>
     </main>
-    <script src="{% static 'js/addCart.js' %}"></script>
   </body>
 </html>
+<img src="{% static 'images/profile.png' %}" alt="">
+<script src="{% static 'addCart.js' %}"></script>
+
