add serch event

--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -145,6 +145,17 @@
       .event-card:hover {
         transform: translateY(-10px);
       }
+      #search-button {
+        background-color: #a9ab8d;
+        color: #fff;
+        padding: 8px 12px;
+        border-radius: 5px;
+        text-decoration: none;
+      }
+    
+      #search-button:hover {
+        background-color: #555;
+      }
     </style>
     <script src="{% static 'js/home.js' %}"></script>
   </head>
@@ -157,9 +168,13 @@
           <li><a href="#">Pending</a></li>
           <li><a href="#">Booking</a></li>
           <li><a href="{% url 'view_cart' %}">Cart</a></li>
-
+          
+          <!-- زر البحث -->
+          <li>
+            <a href="{% url 'search_event' %}" id="search-button">Search Events</a>
+          </li>
+    
           {% if user.is_authenticated %}
-          <!-- قائمة الملف الشخصي -->
           <li class="profile-menu">
             <a href="#" id="profile-toggle">
               <img
@@ -181,13 +196,13 @@
               <li><a href="{% url 'logout' %}">Logout</a></li>
             </ul>
           </li>
-          {% else%}
+          {% else %}
           <li><a href="{% url 'login_view' %}">Login</a></li>
           {% endif %}
         </ul>
       </nav>
     </header>
-
+    
     <main id="events-Main">
       <!-- <div class="event-card">
         <img src="imgages\realmadrid.jpeg" alt="Event Image" />
