--- a/templates/book_ticket.html
+++ b/templates/book_ticket.html
@@ -7,11 +7,20 @@
     <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
   </head>
   <body>
+    
     <div class="container">
       <h1>Checkout for {{ event.title }}</h1>
       <p>Price: {{ event.price }} USD</p>
       <form method="POST">
-        {% csrf_token %} {{ form.as_p }}
+        {% csrf_token %} {{ form.as_p }} {% if form.non_field_errors %}
+        <div class="error">
+          <ul>
+            {% for error in form.non_field_errors %}
+            <li>{{ error }}</li>
+            {% endfor %}
+          </ul>
+        </div>
+        {% endif %}
 
         <button type="submit" class="btn-submit">المتابعة إلى الدفع</button>
       </form>
